Adds span elements for navbar links with styling enhancements
Enhances the navbar by wrapping link text in span elements for better styling control. Introduces styles for hover effects and underlines using pseudo-elements. Improves visual clarity and positioning consistency across the navigation items.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -278,12 +278,12 @@
             </button>
             <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="navbar-nav" id="home-navbar">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">About</a>
-                    <a class="nav-link" href="#">category</a>
-                    <a class="nav-link" href="#">product Details</a>
-                    <a class="nav-link" href="#">Cart</a>
-                    <a class="nav-link" href="#">Checkout</a>
+                    <a class="nav-link active" aria-current="page" href="#"><span>Home</span></a>
+                    <a class="nav-link" href="#"><span>About</span></a>
+                    <a class="nav-link" href="#"><span>category</span></a>
+                    <a class="nav-link" href="#"><span>product Details</span></a>
+                    <a class="nav-link" href="#"><span>Cart</span></a>
+                    <a class="nav-link" href="#"><span>Checkout</span></a>
 
                     <!-- dropdown -->
                     <!-- <a class="nav-link" href="#">Dropdown</a> -->
