--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -2134,22 +2134,22 @@
         <!-- top fotter -->
         <!-- Done -->
 
-        <footer id="footer" style="background-color: #f8f4f6; padding-bottom: 1rem;">
+        <footer id="footer-main" class="footer-main">
 
-            <div class="footer container-fluid ">
-                <div class="row gy-4">
+            <div class="footer container-fluid">
+                <div class="row gy-4" style="padding-top: 4rem; padding-bottom: 3rem; left: 6rem; position: relative;">
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-widget footer-about">
                             <a href="index.html" class="logo ">
                                 <span class="sitename fw-bolder"
                                     style="color: #8c0d4f; font-family: quicksand, sans-serif; font-size: 2rem; letter-spacing: 0.5px;">FashionStore</span>
                             </a>
-                            <p class="pt-3 fw-normal" style="font-size: 1rem; font-family: quicksand;">Lorem ipsum
+                            <p class="pt-3 fw-normal" style="font-size: 1.2rem; font-family: quicksand;">Lorem ipsum
                                 dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula,
                                 facilisis magna ut, consectetur lorem. Proin eget tortor.</p>
 
                             <div class="social-links mt-1">
-                                <h5 style="font-family: quicksand; color: rgb(69, 65, 65); font-size: 1.2rem;">
+                                <h5 style="font-family: quicksand; color: rgb(69, 65, 65); font-size: 1rem;">
                                     Connect With Us</h5>
                                 <div class="social-icons ">
                                     <a href="#" aria-label="Facebook"><i class='bx bxl-facebook-circle bx-sm'></i></a>
@@ -2165,8 +2165,8 @@
 
                     <div class="col-lg-2 col-md-6 col-sm-6">
                         <div class="footer-widget ">
-                            <h4 class=" px-4 pb-0 ">Shop </h4>
-                            <ul class="footer-links">
+                            <h4 class="pb-0">Shop </h4>
+                            <ul class="footer-links pt-2">
                                 <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>New
                                         Arrivals</a></li>
                                 <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
@@ -2185,8 +2185,8 @@
 
                     <div class="col-lg-2 col-md-6 col-sm-6">
                         <div class="footer-widget">
-                            <h4 class=" px-4 pb-0 ">Support</h4>
-                            <ul class="footer-links">
+                            <h4 class="pb-0 ">Support</h4>
+                            <ul class="footer-links pt-2">
                                 <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Help
                                         Center</a></li>
                                 <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Order
@@ -2206,7 +2206,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-widget">
                             <h4>Contact Information</h4>
-                            <div class="footer-contact">
+                            <div class="footer-contact pt-2">
                                 <div class="contact-item mb-3">
                                     <i class='bx bx-map bx-sm' style='color:#8c0d4f'></i>
                                     <span>123 Fashion Street, New York, NY 10001</span>
