--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -289,7 +289,7 @@
                     <!-- <a class="nav-link" href="#">Dropdown</a> -->
 
                     <div class="dropdown">
-                        <a class="nav-link">Dropdown<i class=' nav-link  bx bx-chevron-down'></i></a>
+                        <a class="nav-link"><span>Dropdown</span><i class=' nav-link  bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
                             <a class="nav-link" href="#">dropdown 1</a>
                             <a class="nav-link" href="#">dropdown 2</a>
@@ -320,7 +320,7 @@
                         <div class="dropdown Mega-dropdown">
                             <a class="nav-link MDropbtn" href="#">
 
-                                MegaMenu 1
+                               <span> MegaMenu 1</span>
                             </a>
                         </div>
                         <div class="dropdown-menu mega-menu">
@@ -688,8 +688,8 @@
 
                         <div class="dropdown Mega-dropdown">
                             <a class="nav-link MDropbtn" href="#">
-
-                                MegaMenu 2
+                               <span>
+                                MegaMenu 2</span>
                             </a>
                         </div>
                         <div class="dropdown-menu mega-menu-two">
@@ -909,7 +909,7 @@
 
 
                     <!-- CONTACT -->
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html"><span>Contact</span></a>
 
                 </div>
             </div>
