Improves hover styles and adds cart button enhancements
Updates hover effects for category cards and "Add to Cart" button, including color adjustments for better contrast and user experience.

Adds consistent styling for the "Add to Cart" button, including hover state with darker background color and improved text visibility.

Enhances index.html to apply dark text styling for better readability within the cart section.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -1762,7 +1762,7 @@
 
                         <!-- add to cart -->
 
-                        <div class="text-center p-0">
+                        <div class="text-center text-dark p-0">
                             <button type="button" class="add-cart  btn text-white">
                                 Add To Cart <i class='bx bx-cart-alt text-white p-1'></i> </button>
                         </div>
