Updates footer layout and hover styles in UI
Refines footer element structure by adjusting container width and padding for improved responsiveness. Updates hover effects in CSS to enhance visual alignment and positioning. These changes aim to improve user experience and design consistency across the application.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -2136,8 +2136,8 @@
 
         <footer id="footer-main" class="footer-main">
 
-            <div class="footer container-fluid">
-                <div class="row gy-4" style="padding-top: 4rem; padding-bottom: 3rem; left: 6rem; position: relative;">
+            <div class="footer container w-80">
+                <div class="row gy-4" style="padding-top: 4rem; padding-bottom: 3rem; left: 2rem; position: relative;">
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-widget footer-about">
                             <a href="index.html" class="logo ">
@@ -2250,7 +2250,7 @@
                                 <p>© <span>Copyright</span> <strong class="sitename">MyWebsite</strong>. All Rights
                                     Reserved.</p>
                             </div>
-                            <div class="credits mt-1">
+                            <div class="credits mt-1" >
                                 Designed by <a href="https://bootstrapmade.com/"
                                     style=" color: #8c0d4f;">BootstrapMade</a>
                             </div>
