Improve mega-category card styling and footer layout
Updates the mega-category card styles by increasing width, adding a
heading style, and refining paragraph font size. Enhances footer links
with consistent font sizing and layout adjustments. Fixes minor HTML
syntax issues and improves overall alignment and spacing for better
visual consistency.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -583,13 +583,13 @@
                                         <div class="container overflow-hidden">
                                             <div class="row pt-4">
                                                 <div class="col-12">
-                                                    <div class="row justify-content-center gap-5">
+                                                    <div class="row justify-content-center gap-5 p-5">
                                                         <div class="Megacat-card col-3">
                                                             <h6>Clothing</h6>
                                                             <hr class="w-100">
                                                             <ul class="list-unstyled">
                                                                 <li>
-                                                                    <p" class="text-decoration-none"><i
+                                                                    <p class="text-decoration-none"><i
                                                                             class='bx bxs-chevron-right'></i>Shirts</a>
                                                                 </li>
                                                                 <li>
@@ -653,6 +653,7 @@
                                                         </div>
                                                         <div class="Megacat-card col-3">
                                                             <h6>Electronics</h6>
+                                                            <hr>
                                                             <ul class="list-unstyled">
                                                                 <li>
                                                                     <p class="text-decoration-none"><i
@@ -2151,7 +2152,7 @@
                             <div class="social-links mt-1">
                                 <h5 style="font-family: quicksand; color: rgb(69, 65, 65); font-size: 1rem;">
                                     Connect With Us</h5>
-                                <div class="social-icons ">
+                                <div class="social-icons">
                                     <a href="#" aria-label="Facebook"><i class='bx bxl-facebook-circle bx-sm'></i></a>
                                     <a href="#" aria-label="Instagram"> <i class='bx bxl-instagram bx-sm'></i></a>
                                     <a href="#" aria-label="podcast"><i class='bx bx-podcast bx-sm'></i></a>
@@ -2164,7 +2165,7 @@
                     </div>
 
                     <div class="col-lg-2 col-md-6 col-sm-6">
-                        <div class="footer-widget ">
+                        <div class="footer-widget">
                             <h4 class="pb-0">Shop </h4>
                             <ul class="footer-links pt-2">
                                 <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>New
