--- a/FashinstoreClone/contact.html
+++ b/FashinstoreClone/contact.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <!-- topnavHeading -->
+    <!-- topnavHeading -->
     <!-- done -->
     <nav class="navbar navbar-light bg-light" style="font-size: 14px;">
         <div class="container-fluid">
@@ -306,7 +306,7 @@
                         <div class="dropdown Mega-dropdown">
                             <a class="nav-link MDropbtn" href="#">
 
-                               <span> MegaMenu 1</span>
+                                <span> MegaMenu 1</span>
                             </a>
                         </div>
                         <div class="dropdown-menu mega-menu">
@@ -675,8 +675,8 @@
 
                         <div class="dropdown Mega-dropdown">
                             <a class="nav-link MDropbtn" href="#">
-                               <span>
-                                MegaMenu 2</span>
+                                <span>
+                                    MegaMenu 2</span>
                             </a>
                         </div>
                         <div class="dropdown-menu mega-menu-two">
@@ -977,8 +977,9 @@
                     </div>
 
                     <div class="col-lg-8">
-                        <form action="forms/contact.php" method="post" class="php-email-form aos-init aos-animate"
-                            data-aos="fade-up" data-aos-delay="200">
+                        <form action="#" method="post" class="php-email-form">
+
+
                             <div class="row gy-4">
 
                                 <div class="col-md-6">
@@ -1018,162 +1019,160 @@
 
     </div>
 
-     <!-- top fotter -->
-        <!-- Done -->
+    <!-- top fotter -->
+    <!-- Done -->
 
-        <footer id="footer-main" class="footer-main">
+    <footer id="footer-main" class="footer-main">
 
-            <div class="footer container w-80">
-                <div class="row gy-4" style="padding-top: 4rem; padding-bottom: 3rem; left: 2rem; position: relative;">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="footer-widget footer-about">
-                            <a href="index.html" class="logo ">
-                                <span class="sitename fw-bolder"
-                                    style="color: #8c0d4f; font-family: quicksand, sans-serif; font-size: 2rem; letter-spacing: 0.5px;">FashionStore</span>
+        <div class="footer container w-80">
+            <div class="row gy-4" style="padding-top: 4rem; padding-bottom: 3rem; left: 2rem; position: relative;">
+                <div class="col-lg-4 col-md-6">
+                    <div class="footer-widget footer-about">
+                        <a href="index.html" class="logo ">
+                            <span class="sitename fw-bolder"
+                                style="color: #8c0d4f; font-family: quicksand, sans-serif; font-size: 2rem; letter-spacing: 0.5px;">FashionStore</span>
+                        </a>
+                        <p class="pt-3 fw-normal" style="font-size: 1.2rem; font-family: quicksand;">Lorem ipsum
+                            dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula,
+                            facilisis magna ut, consectetur lorem. Proin eget tortor.</p>
+
+                        <div class="social-links mt-1">
+                            <h5 style="font-family: quicksand; color: rgb(69, 65, 65); font-size: 1rem;">
+                                Connect With Us</h5>
+                            <div class="social-icons">
+                                <a href="#" aria-label="Facebook"><i class='bx bxl-facebook-circle bx-sm'></i></a>
+                                <a href="#" aria-label="Instagram"> <i class='bx bxl-instagram bx-sm'></i></a>
+                                <a href="#" aria-label="podcast"><i class='bx bx-podcast bx-sm'></i></a>
+                                <a href="#" aria-label="TikTok"><i class='bx bxl-tiktok bx-sm'></i></a>
+                                <a href="#" aria-label="Pinterest"><i class='bx bxl-pinterest bx-sm'></i></a>
+                                <a href="#" aria-label="YouTube"><i class='bx bxl-youtube bx-sm'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-6 col-sm-6">
+                    <div class="footer-widget">
+                        <h4 class="pb-0">Shop </h4>
+                        <ul class="footer-links pt-2">
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>New
+                                    Arrivals</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
+                                        style='color:#8c0d4f'></i>Bestsellers</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Women's
+                                    Clothing</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Men's
+                                    Clothing</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
+                                        style='color:#8c0d4f'></i>Accessories</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Sale</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-6 col-sm-6">
+                    <div class="footer-widget">
+                        <h4 class="pb-0 ">Support</h4>
+                        <ul class="footer-links pt-2">
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Help
+                                    Center</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Order
+                                    Status</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Shipping
+                                    Info</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Returns
+                                    &amp; Exchanges</a></li>
+                            <li><a href="#"><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Size
+                                    Guide</a></li>
+                            <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Contact
+                                    Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="footer-widget">
+                        <h4>Contact Information</h4>
+                        <div class="footer-contact pt-2">
+                            <div class="contact-item mb-3">
+                                <i class='bx bx-map bx-sm' style='color:#8c0d4f'></i>
+                                <span>123 Fashion Street, New York, NY 10001</span>
+                            </div>
+                            <div class="contact-item mb-3">
+                                <i class='bx bx-phone bx-sm' style='color:#8c0d4f'></i>
+                                <span>+1 (555) 123-4567</span>
+                            </div>
+                            <div class="contact-item mb-3">
+                                <i class="bx bx-envelope bx-sm" style='color:#8c0d4f'></i>
+                                <span>hello@example.com</span>
+                            </div>
+                            <div class="contact-item mb-3">
+                                <i class='bx bx-time-five bx-sm' style='color:#8c0d4f'></i>
+                                <span>Monday-Friday: 9am-6pm<br>Saturday: 10am-4pm<br>Sunday: Closed</span>
+                            </div>
+                        </div>
+
+                        <div class="app-buttons mt-4 gap-2 d-flex">
+                            <a href="#" class="app-btn">
+                                <i class='bx bxl-apple bx-sm'></i>
+                                <span>App Store</span>
                             </a>
-                            <p class="pt-3 fw-normal" style="font-size: 1.2rem; font-family: quicksand;">Lorem ipsum
-                                dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula,
-                                facilisis magna ut, consectetur lorem. Proin eget tortor.</p>
-
-                            <div class="social-links mt-1">
-                                <h5 style="font-family: quicksand; color: rgb(69, 65, 65); font-size: 1rem;">
-                                    Connect With Us</h5>
-                                <div class="social-icons">
-                                    <a href="#" aria-label="Facebook"><i class='bx bxl-facebook-circle bx-sm'></i></a>
-                                    <a href="#" aria-label="Instagram"> <i class='bx bxl-instagram bx-sm'></i></a>
-                                    <a href="#" aria-label="podcast"><i class='bx bx-podcast bx-sm'></i></a>
-                                    <a href="#" aria-label="TikTok"><i class='bx bxl-tiktok bx-sm'></i></a>
-                                    <a href="#" aria-label="Pinterest"><i class='bx bxl-pinterest bx-sm'></i></a>
-                                    <a href="#" aria-label="YouTube"><i class='bx bxl-youtube bx-sm'></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 col-sm-6">
-                        <div class="footer-widget">
-                            <h4 class="pb-0">Shop </h4>
-                            <ul class="footer-links pt-2">
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>New
-                                        Arrivals</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Bestsellers</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Women's Clothing</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Men's
-                                        Clothing</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Accessories</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Sale</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 col-sm-6">
-                        <div class="footer-widget">
-                            <h4 class="pb-0 ">Support</h4>
-                            <ul class="footer-links pt-2">
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Help
-                                        Center</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Order
-                                        Status</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Shipping Info</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Returns &amp; Exchanges</a></li>
-                                <li><a href="#"><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Size
-                                        Guide</a></li>
-                                <li><a href=""><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Contact Us</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="footer-widget">
-                            <h4>Contact Information</h4>
-                            <div class="footer-contact pt-2">
-                                <div class="contact-item mb-3">
-                                    <i class='bx bx-map bx-sm' style='color:#8c0d4f'></i>
-                                    <span>123 Fashion Street, New York, NY 10001</span>
-                                </div>
-                                <div class="contact-item mb-3">
-                                    <i class='bx bx-phone bx-sm' style='color:#8c0d4f'></i>
-                                    <span>+1 (555) 123-4567</span>
-                                </div>
-                                <div class="contact-item mb-3">
-                                    <i class="bx bx-envelope bx-sm" style='color:#8c0d4f'></i>
-                                    <span>hello@example.com</span>
-                                </div>
-                                <div class="contact-item mb-3">
-                                    <i class='bx bx-time-five bx-sm' style='color:#8c0d4f'></i>
-                                    <span>Monday-Friday: 9am-6pm<br>Saturday: 10am-4pm<br>Sunday: Closed</span>
-                                </div>
-                            </div>
-
-                            <div class="app-buttons mt-4 gap-2 d-flex">
-                                <a href="#" class="app-btn">
-                                    <i class='bx bxl-apple bx-sm'></i>
-                                    <span>App Store</span>
-                                </a>
-                                <a href="#" class="app-btn">
-                                    <i class='bx bxl-play-store bx-sm'></i>
-                                    <span>Google Play</span>
-                                </a>
-                            </div>
+                            <a href="#" class="app-btn">
+                                <i class='bx bxl-play-store bx-sm'></i>
+                                <span>Google Play</span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <hr>
-            <!--bottom footer  -->
-            <div class="footer-bottom">
-                <div class="container">
-                    <div class="row gy-3 align-items-center">
-                        <div class="col-lg-6 col-md-12">
-                            <div class="copyright">
-                                <p>© <span>Copyright</span> <strong class="sitename">MyWebsite</strong>. All Rights
-                                    Reserved.</p>
-                            </div>
-                            <div class="credits mt-1" >
-                                Designed by <a href="https://bootstrapmade.com/"
-                                    style=" color: #8c0d4f;">BootstrapMade</a>
-                            </div>
+        <hr>
+        <!--bottom footer  -->
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row gy-3 align-items-center">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="copyright">
+                            <p>© <span>Copyright</span> <strong class="sitename">MyWebsite</strong>. All Rights
+                                Reserved.</p>
                         </div>
-
-                        <div class="col-lg-6 col-md-12">
-                            <div
-                                class="d-flex flex-wrap justify-content-lg-end justify-content-center align-items-center">
-                                <div class="payment-methods">
-                                    <i class='bx bx-credit-card bx-md '></i>
-                                    <i class='bx bxl-paypal bx-md '></i>
-                                    <i class='bx bxl-apple bx-md '></i>
-                                    <i class='bx bx-store bx-md'></i>
-
-                                    <a href="#">Terms</a>
-                                    <a href="#">Privacy</a>
-                                    <a href="#">Cookies</a>
-                                </div>
-                            </div>
+                        <div class="credits mt-1">
+                            Designed by <a href="https://bootstrapmade.com/" style=" color: #8c0d4f;">BootstrapMade</a>
                         </div>
                     </div>
 
+                    <div class="col-lg-6 col-md-12">
+                        <div class="d-flex flex-wrap justify-content-lg-end justify-content-center align-items-center">
+                            <div class="payment-methods">
+                                <i class='bx bx-credit-card bx-md '></i>
+                                <i class='bx bxl-paypal bx-md '></i>
+                                <i class='bx bxl-apple bx-md '></i>
+                                <i class='bx bx-store bx-md'></i>
+
+                                <a href="#">Terms</a>
+                                <a href="#">Privacy</a>
+                                <a href="#">Cookies</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
-            <!-- scroll-top -->
+        </div>
+        <!-- scroll-top -->
 
-            <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center active"><i
-                    class="bx bx-up-arrow-alt bx-sm text-white"></i></a>
-        </footer>
+        <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center active"><i
+                class="bx bx-up-arrow-alt bx-sm text-white"></i></a>
+    </footer>
 
 
-        <script src="fstore.js"></script>
-        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+    <script src="fstore.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
